test/corpus/errors.txt
===
Incorrectly closed mustache
===
{{#img-bottom-src}}
{{#foo}}
<div></div>
{{/img-bottom-src}}
{{/foo}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name))
        (html_end_tag
          (html_tag_name)))
      (mustache_erroneous_section_end
        (mustache_erroneous_tag_name)))
    (mustache_erroneous_section_end
      (mustache_erroneous_tag_name))))

===
Error recovery: broken tag between valid elements
===
<div>before</div>
<>stray
<p>after</p>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_end_tag
      (html_tag_name)))
  (text)
  (text)
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_end_tag
      (html_tag_name))))

===
Error recovery: broken tag inside mustache section
===
{{#items}}
<div>ok</div>
<>broken
<p>recovered</p>
{{/items}}
<footer>end</footer>
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text)
      (html_end_tag
        (html_tag_name)))
    (text)
    (text)
    (html_element
      (html_start_tag
        (html_tag_name))
      (text)
      (html_end_tag
        (html_tag_name)))
    (mustache_section_end
      (mustache_tag_name)))
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_end_tag
      (html_tag_name))))

===
Error recovery: error between custom element blocks
===
<pl-thing name="a">
  <pl-item tag="1">A</pl-item>
</pl-thing>
<>error
<pl-thing name="b">
  <pl-item tag="2">B</pl-item>
</pl-thing>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value))))
    (html_element
      (html_start_tag
        (html_tag_name)
        (html_attribute
          (html_attribute_name)
          (html_quoted_attribute_value
            (html_attribute_value))))
      (text)
      (html_end_tag
        (html_tag_name)))
    (html_end_tag
      (html_tag_name)))
  (text)
  (text)
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value))))
    (html_element
      (html_start_tag
        (html_tag_name)
        (html_attribute
          (html_attribute_name)
          (html_quoted_attribute_value
            (html_attribute_value))))
      (text)
      (html_end_tag
        (html_tag_name)))
    (html_end_tag
      (html_tag_name))))

===
Error recovery: error inside nested mustache and HTML
===
{{#section}}
<div>
  <>error here
  <span>recovers</span>
</div>
{{/section}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text)
      (text)
      (html_element
        (html_start_tag
          (html_tag_name))
        (text)
        (html_end_tag
          (html_tag_name)))
      (html_end_tag
        (html_tag_name)))
    (mustache_section_end
      (mustache_tag_name))))

===
Cross-boundary conditional wrapping inside outer element
===
<div class="input-group">
  {{#bad_section}}
  <h1>Hello there</h1>
  <div>
  {{/bad_section}}
  <h2>Hello there</h2>
  {{#bad_section}}
  </div>
  {{/bad_section}}
</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value))))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name))
        (text)
        (html_end_tag
          (html_tag_name)))
      (html_element
        (html_start_tag
          (html_tag_name))
        (html_forced_end_tag))
      (mustache_section_end
        (mustache_tag_name)))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text)
      (html_end_tag
        (html_tag_name)))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_erroneous_end_tag
        (html_erroneous_end_tag_name))
      (mustache_section_end
        (mustache_tag_name)))
    (html_end_tag
      (html_tag_name))))

===
Implicit end tag from closing mustache context
===
<div>
  {{#img-bottom-src}}
    <article>
    <p>
  {{/img-bottom-src}}
</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name))
        (html_element
          (html_start_tag
            (html_tag_name))
          (html_forced_end_tag))
        (html_forced_end_tag))
      (mustache_section_end
        (mustache_tag_name)))
    (html_end_tag
      (html_tag_name))))
